# AweSOM

./: .gitignore  README.md  pyproject.toml
awesome/: som.py
