[build-system]
requires = ["setuptools"]

[project]
name = "awesome"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "numpy==1.26.4"
]

[project.optional-dependencies]
test = [
    "black==23.7.0",
    "pytest==7.4.0",
    "flake8==6.0.0",
    "Flake8-pyproject==1.2.3",
    "mypy==1.4.1",
    "python_dotenv==1.0.0",
    "pytest-dotenv==0.5.2",
    "types-PyYAML==6.0.12.12"
]

[tool.setuptools.dynamic]
version = {attr = "awesome.__version__"}

[tool.setuptools.packages.find]
include = ["awesome*"]

[tool.flake8]
ignore = ['E203', 'W503']
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
faulthandler_timeout=5